2000-09-22  Dirk Herrmann  <D.Herrmann@tu-bs.de>

	* backtrace.c (display_frame_expr), environments.c
	(print_observer, print_leaf_environment, print_eval_environment,
	print_import_environment, print_export_environment), gh_data.c
	(gh_set_substr, gh_symbol2newstr), keywords.c
	(scm_make_keyword_from_dash_symbol), ports.c (scm_drain_input),
	posix.c (scm_mknod), print.c (scm_iprin1), regexp-posix.c
	(scm_regexp_error_msg), script.c (scm_compile_shell_switches),
	simpos.c (scm_getenv), socket.c (scm_recv, scm_recvfrom),
	strings.c (scm_makfromstr), strop.c (scm_substring_move_x,
	scm_substring_fill_x, scm_string_capitalize_x), symbols.c
	(scm_symbol_to_string), unif.c (scm_make_uve, scm_array_p),
	validate.h (SCM_VALIDATE_STRING_COPY):  Use SCM_STRING_CHARS or
	SCM_SYMBOL_CHARS instead of SCM_CHARS.

2000-09-22  Dirk Herrmann  <D.Herrmann@tu-bs.de>

	* strings.h (SCM_STRING_CHARS):  Added, should be used instead of
	SCM_CHARS whenever the argument is known to be a string.

	(SCM_SLOPPY_STRINGP):  Deprecated.

	* symbols.h (SCM_SYMBOL_CHARS):  Added, should be used instead of
	SCM_CHARS whenever the argument is known to be a symbol.

2000-09-22  Neil Jerram  <neil@ossau.uklinux.net>

	* struct.c (scm_make_struct): Fix texinfo warning in docstring by
	using @pxref rather than @xref.

	* root.c (scm_call_with_dynamic_root): Fix texinfo warning in
	docstring by using @code for (thunk) rather than @var.

2000-09-20  Marius Vollmer  <mvo@zagadka.ping.de>

	* numbers.c (scm_istr2flo): Throw an `out of range' error when
	exponent is too large instead of returning `#f'.  The rationale is
	that in this case the string represents a valid number but we
	can't deal with it.

2000-09-20  Dirk Herrmann  <D.Herrmann@tu-bs.de>

	* symbols.c (scm_intern_obarray_soft,
	scm_sysintern0_no_module_lookup):  Make sure that symbol
	properties initially form an empty list.  Thanks to Keisuke
	Nishida for pointing this out.

2000-09-19  Dirk Herrmann  <D.Herrmann@tu-bs.de>
